SVG styling and limiting user inputs Redeclare svg element styles to a fixed width adjust the margin Code 15 character hard limit for buttons Update delete button to remove whitespace before deleting Update math operator functionality to return when there are no characters or the last character is a space Update equality button functionality to split only the first 3 instances of " " found Add temporary js comments for reference

--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,8 @@ h1, h2, h3, h4, h5, h6 {
 
 svg {
     height: auto;
-    width: 35%;
-    margin: 10% 0 0 30%;
+    width: 40px;
+    margin: 10% 0 0 35%;
 }
 
 #error-box {
